Sun Feb  3 09:20:04 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* tests/TP_Reactor_Test.cpp: Fixed a bunch of warnings.  Thanks
	  to Venkita for reporting this.

Sun Feb  3 08:22:28 2002  Venkita Subramonian  <venkita@cs.wustl.edu>

	* tests/Makefile: 
	  Regenerated makefile to create dependencies for TP_Reactor_Test.

Sun Feb  3 08:05:12 2002  Venkita Subramonian  <venkita@cs.wustl.edu>

	* tests/TP_Reactor_Test.dsp (RSC): 
	  Regenerated the file in MSVC++. 

Sun Feb  3 11:16:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * tests/TP_Reactor_Test.cpp:
          Fixed compile error in BCB unicode build

Sat Feb  2 07:45:51 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* tests/run_test.lst:
	* tests/TP_Reactor_Test.dsp:
	* tests/Makefile.bor:
	* tests/Makefile: Added the TP_Reactor_Test.

	* tests/TP_Reactor_Test.cpp: Added another test of the ACE_TP_Reactor.
	  Thanks to Alex Libman for contributing this.

	* ace/config-irix6.x-common.h: IRIX 6.5 supports AIO, so we'll
	  enable these features.  Thanks to Alex Libman for validating
 	  this.

	* ace/Select_Reactor_T.cpp: Fixed work_pending() so that it takes
	  into account pending timers that need to be expired.  Thanks to
 	  Russ Noseworthy for reporting this.

	* ace/Select_Reactor_T.cpp: Simplified the logic for calculating
	  timeouts in wait_for_multiple_events().

	* ace/Process.{h,i,cpp}: When using ACE_Process_Options with the
	  inherit_environment set to off, i.e., ACE_Process_Options opts
 	  (0), ACE_Process::spawn() was improperly setting the environment
 	  in the child's process after fork (), before exec ().  Changed
 	  ACE_Process::spawn to check for the inherit_environment flag,
 	  and to use the execve () call instead of execvp () if
 	  inherit_environment is false.  Thanks to James Risinger
 	  <jrisinger@SignalSoftCorp.com> for contributing this fix.

	* ace/Process.{h,i}: Added "const" to the various accessor methods.
